# travel_search_aggregator

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile.api  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml
app/: main.py
app/api/: deps.py
app/api/routes/: debug.py  extract.py  search.py  search_ai.py
app/core/: config.py  dependencies.py  rate_limiter.py  redis.py
app/db/: __init__.py  seed.py  session.py
app/models/: __init__.py  trip.py
app/providers/: __init__.py  adapters.py  adapters_utils.py  provider_a.py  provider_b.py  provider_c.py  provider_rapidapi.py
app/schemas/: __init__.py  recommend.py  search_ai.py  trip.py
app/services/: cache.py  llm.py  model_download.py  ranking.py  search.py
frontend/: .env.production  index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AIChatModal.tsx  Header.tsx  Results.tsx  SearchForm.tsx
frontend/src/i18n/: translations.ts  useTranslation.ts
frontend/src/types/: trip.ts
redis_data/: dump.rdb
redis_data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof  appendonly.aof.manifest
tests/: test_config.py  test_ranking.py
