[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel_search_aggregator"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "gunicorn==23.0.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "redis==7.4.0",
    "orjson==3.11.8",
    "aiosqlite==0.22.1",
    "email-validator==2.3.0",
    "httpx==0.28.1",
    "ollama==0.4.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["nginx*", "frontend*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
